add first fixes